2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	* gtk/gtkuimanager.c (update_node): Skip update of accelerator 
	child node if it has no associated action. Fixes #541950.
	Patch by Christian Neumair

2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 528845 – segv from GtkBuilder on attempting <accelerator> under
	GtkCellView

	* gtk/gtkcellview.c: Don't blindly chain up in the buildable
	implementation.  Reported by Kevin Ryde.

2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 541645 – gtkfilechooserdefault segfaults when bookmark does not
	contain ://

	* gtk/gtkfilechooserdefault.c (_gtk_file_chooser_label_for_file):
	Be more robust. Reported by  Jelte van der Hoek

2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 538863 – Fixes assertion on entering empty folder

	* gtk/gtkfilechooserdefault.c (browse_files_select_first_row): Don't
	select the first row if the folder is empty.
	Patch by Olle Bergkvist.

2008-08-27  Cody Russell  <bratsche@gnome.org>

	Merged from trunk:

	* gdk/win32/gdkevents-win32.c:
	* gdk/win32/gdkwindow-win32.c (show_window_recurse): Check if
	the window's state has GDK_WINDOW_STATE_MAXIMIZED set before
	calling ShowWindow (), and show using SW_SHOWMAXIMIZED or     
	SW_RESTORE accordingly.  This fixes an issue where maximized 
	windows that are iconified do not restore back to maximized 
	when you click the taskbar. (#528975)

2008-08-21  Cody Russell  <bratsche@gnome.org>

	Merged from trunk:

	* gdk/win32/gdkevents-win32.c (doesnt_want_key): Remove the checks
	to see if the window is modally blocked.  This doesn't get us anything,
	and it confuses the search window in GtkTreeView (and potentially other
	utility windows in other apps).  (#520165)

2008-08-04  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* gtk/gtklinkbutton.c (gtk_link_button_set_uri): update the link
	color when the "visited" state is changed.
